# ME-433

./: README.md
HW 12/: CMakeLists.txt  blink.uf2  main.c
HW 13/: dev_hid_composite.uf2
HW 13/dev_hid_composite/: CMakeLists.txt  blink.c  blink.h  main.c  usb_descriptors.h
HW 15/Camera to Tress Connector/: Camera 1.stl
HW 15/PCB Bracket/: PCB Bracket.stl
HW 15/Wheel/: Wheel.stl
HW 5/: CMakeLists.txt
HW 5/mti2c/: mti2c.c
HW11/: centre.py
HW16/: code.uf2
HW16/code/: CMakeLists.txt  code.c
HW2-3/led/: CMakeLists.txt
HW2-3/mti2c/: CMakeLists.txt
HW2-3/print/: CMakeLists.txt  print.c
HW2-3/spi/: spi.c
HW4/: CMakeLists.txt
HW4/spi/: CMakeLists.txt  spi.c
HW6/: code.c  ssd1306.c  ssd1306.uf2
HW7/: code.c  font.h  uart.uf2
HW9/: CMakeLists.txt  code.c
github/workflows/: build.yml
